--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tutorial-react-hooks",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://neoguias.github.io/tutorial-react-hooks",
+  "homepage": "https://neoguias.github.io/tutorial-react-hooks/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
